@@ -1,6 +1,8 @@
 2000-04-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
 
 	* Makefile (RELEASE): Changelog changed to ChangeLog
+	(release): now specifying filename in cmd line to tar rather than
+	redirecting into file
 
 2000-04-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
 
